integrate vscode debugger

--- a/firmware/example/lpc1769/BUILD
+++ b/firmware/example/lpc1769/BUILD
@@ -1,6 +1,6 @@
 cc_binary(
     name = "blinky_led",
-    srcs = ["blinky.cpp"],
+    srcs = ["blinky.c"],
     additional_linker_inputs = ["//third_party/nxp/lpc1769/linker_scripts:lpc1769_ld"],
     linkopts = ["-Wl,-T$(location //third_party/nxp/lpc1769/linker_scripts:lpc1769_ld)"],
     target_compatible_with = ["@platforms//cpu:armv7-m"],
