--- a/firmware/example/lpc1769/BUILD
+++ b/firmware/example/lpc1769/BUILD
@@ -1,3 +1,5 @@
+load("//infrastructure/bazel:rules/setup_project.bzl", "setup_project")
+
 cc_binary(
     name = "blinky_led",
     srcs = ["blinky.c"],
@@ -9,3 +11,9 @@ cc_binary(
         "//third_party/nxp/lpc1769:lpc17xx",
     ],
 )
+
+setup_project(
+    name = "bin1",
+    elf_file = "//firmware/example/lpc1769:blinky_led",
+)
+# foo_binary(name = "bin2")
