--- a/firmware/example/lpc1769/BUILD
+++ b/firmware/example/lpc1769/BUILD
@@ -1,19 +1,16 @@
-load("//infrastructure/bazel:rules/setup_project.bzl", "setup_project")
+load("//infrastructure/bazel:rules/setup_project.bzl", "lpc17xx_firmware", "setup_project")
 
-cc_binary(
-    name = "blinky_led",
+setup_project(
+    name = "lpc1769_blinky",
+    base_firmware = "//firmware/example/lpc1769:test",
+)
+
+#TODO: I would like this to be cc_library and the setup project to just build the deps in setup_project but for now this works. Also I would like the setup project to just build with
+# debug symbols
+lpc17xx_firmware(
+    name = "test",
     srcs = ["blinky.c"],
-    additional_linker_inputs = ["//third_party/nxp/lpc1769/linker_scripts:lpc1769_ld"],
-    linkopts = ["-Wl,-T$(location //third_party/nxp/lpc1769/linker_scripts:lpc1769_ld)"],
-    target_compatible_with = ["@platforms//cpu:armv7-m"],
-    visibility = ["//visibility:public"],
     deps = [
         "//third_party/nxp/lpc1769:lpc17xx",
     ],
 )
-
-setup_project(
-    name = "bin1",
-    elf_file = "//firmware/example/lpc1769:blinky_led",
-)
-# foo_binary(name = "bin2")
